<resources>
    <string name="app_name">MnemoAI</string>
<!-- TODO: Remove or change this placeholder text -->
    <string-array name="segment_theme">
        <item>跟随系统</item>
        <item>浅色</item>
        <item>深色</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group">组</string>
    <string name="create_new_group">创建新分组</string>
    <string name="search_word">搜索单词</string>
    <string name="search">搜索</string>
    <string name="recite_word">背单词</string>
    <string name="vocabulary_book">单词本</string>>
    <string name="remember">认识</string>
    <string name="blur">模糊</string>
    <string name="forget">忘了</string>>
    <string name="total_count">总词汇: %d</string>
    <string name="learning_count">待学习: %d</string>
    <string name="reviewing_count">复习中: %d</string>
    <string name="mastered_count">已掌握: %d</string>
    <string name="learning">待学习</string>
    <string name="reviewing">复习中</string>
    <string name="mastered">已掌握</string>
    <string name="learning_vocabulary">当前学习</string>
    <string name="study_word_per_day">每日新学</string>
    <string name="today_review_word">今日复习</string>
    <string name="study_word_count_today">已新学</string>
    <string name="review_word_count_today">已复习</string>
    <string name="click_to_change">点击修改</string>
    <string name="word">词</string>
    <string name="all_vocabulary_group">全部词汇</string>
    <string name="my_group">我的分组</string>
    <string name="click_add_vocabulary">点击添加词汇</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="all_word">所有单词 %d</string>
    <string name="mnemonic">助记</string>
    <string name="core_image">核心意象</string>
    <string name="affix">词缀</string>
    <string name="word_explain">释义</string>
    <string name="example_sentences">例句</string>
    <string name="phrases">短语/固定搭配</string>
    <string name="number_of_words_learned_per_day">每日学习单词数量</string>
    <string name="number_progress">%d / %d 词</string>
    <string name="no_vocabulary">当前还未选择词汇，请前往单词本选择词汇</string>
    <string name="reciteWordFinish">今日目标已完成，请明日再来吧！</string>
    <string name="learning_progress">学习进度</string>
    <string name="study_history">学习历史</string>
    <string name="statistic">统计</string>
    <string name="mine">我的</string>
    <string name="light_dark_model">日夜模式</string>
    <string name="fallow_system">跟随系统</string>
    <string name="light_model">日间</string>
    <string name="dark_model">夜间</string>
    <string name="getting_Ai_mnemonic">正在生成AI助记...</string>
    <string name="get_ai_mnemonic_error">获取 AI 助记失败，请稍后再试</string>
    <string name="setting_title_api_key">API key</string>
    <string name="name">名称:</string>
    <string name="description">描述:</string>
    <string name="add_new_vocabulary">添加新单词本</string>
    <string name="change_vocabulary_ook">修改单词本</string>
    <string name="join_learning">加入学习</string>
    <string name="cancel_learning">取消学习</string>
    <string name="delete_vocabulary_book">删除单词本</string>
    <string name="add_words">添加单词</string>
    <string name="remove_words">移除单词</string>
    <string name="adding_removing_words">改变单词</string>
    <string name="optional_words">可选单词</string>
    <string name="add_remove_words">添加/移除单词</string>
    <string name="operation_sort">操作顺序</string>
    <string name="alphabetical_order">字母顺序</string>
    <string name="today_goal">今日目标</string>
    <string name="study_progress">学习进度: </string>
    <string name="ai_mnemonic">AI助记</string>
    <string name="ai_help_message">用AI帮你理解单词</string>
    <string name="generate_mnemonic">生成助记</string>
    <string name="communicate_with_ai">与AI对话</string>
    <string name="no_ai_mnemonic_info">没有生成过助记信息~</string>
    <string name="no_study_history">没有学习过这个单词~</string>
    <string name="learned_time">学习时间: %s</string>
    <string name="rememberTimes_count">认识%d次</string>
    <string name="blurTimes_count">模糊%d次</string>
    <string name="forgetTimes_count">忘记%d次</string>
    <string name="ai_thinking">AI思考中……</string>
    <string name="add_learning_vocabulary_book">添加学习词汇</string>
    <string name="choose_vocabulary_book">选择单词本</string>
    <string name="modify_vocabulary_book">修改单词本</string>
    <string name="word_detail">单词详情</string>
    <string name="word_form_info">词形变化</string>
</resources>