<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    android:fillViewport="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="12dp"
    android:id="@+id/aiMnemonic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Core Image -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/core_image"
            android:textStyle="bold"
            android:textSize="13sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coreImageTV"
            android:layout_marginTop="6dp"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"/>

        <!-- Affix -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/affix"
            android:textStyle="bold"
            android:textSize="13sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/affixTV"
            android:layout_marginTop="6dp"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"/>

        <!-- Explain -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/word_explain"
            android:textStyle="bold"
            android:textSize="13sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/explainTV"
            android:layout_marginTop="6dp"
            android:textSize="15sp" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"/>

        <!-- Example Sentences -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_sentences"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:id="@+id/exampleSentenceLL"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp" />

        <!-- Phrase -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phrases"
            android:textStyle="bold"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/phraseLL"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"/>

    </LinearLayout>

</LinearLayout>